# opensdg

./: .gitignore  CMakeLists.txt  OpenSDG.sln  OpenSDG.vcxproj  OpenSDG.vcxproj.filters  README.md  debuild_all.sh
debian/: changelog  control  copyright  files  shlibs.local
include/: opensdg.h
java/src/org/opensdg/: OSDGConnection.java  OSDGResult.java  OSDGState.java  OpenSDG.java
jni/: CMakeLists.txt  opensdg_jni.c
testapp/: CMakeLists.txt  devismart.c  devismart.h  devismart_config.c  devismart_protocol.h  main.c  pthread_wrapper.h  testapp.h
